# ecommerce-extractor

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yml  products.db  pyproject.toml
crawler/: database.py  items.py  monitors.py  pipelines.py  settings.py
crawler/spiders/: kabum.py
