[project]
name = "ecommerce-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodolfo Murilo Barbosa Moura",email = "rodolfo8murilo@gmail.com"}
]
requires-python = ">=3.12"

dependencies = [
    "scrapy (>=2.14.2,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "spidermon (>=1.24.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
